# apiscan

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/apiscan/: auth.py  cli.py  discovery.py  http.py  models.py  scanner.py
src/apiscan/checks/: __init__.py  cors.py  headers.py  info_leak.py  rate_limit.py  tls.py
src/apiscan/report/: __init__.py  html_report.py
src/apiscan/templates/: report.html.j2
tests/: conftest.py  test_auth_headers.py  test_cli_outputs.py  test_cors_check.py  test_discovery.py  test_headers_check.py  test_info_leak_check.py  test_more_branches.py  test_rate_limit_check.py  test_report_html.py  test_scanner_summary.py  test_tls_check.py
