[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apiscan"
version = "0.1.1"
description = "A safe, public-API security scanner CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Samuel Selasi" }]
license = { text = "MIT" }
dependencies = [
  "httpx>=0.26",
  "rich>=13.0",
  "pydantic>=2.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
]

[project.scripts]
apiscan = "apiscan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apiscan = ["templates/*.j2"]
